# safe_numerics

./: CMakeLists.txt
example/: CMakeLists.txt  example1.cpp
include/boost/safe_numerics/: checked_default.hpp  checked_integer.hpp  checked_result.hpp  checked_result_operations.hpp  exception_policies.hpp  interval.hpp  native.hpp  safe_base.hpp  safe_base_operations.hpp  safe_common.hpp  safe_compare.hpp  safe_integer.hpp
