add_executable(example2 example2.cpp)
target_include_directories(example2 PRIVATE D:/safe_numerics/include)
target_include_directories(example2 PRIVATE D:/boost_1_76_0)

add_executable(example20 example20.cpp)
target_include_directories(example20 PRIVATE D:/safe_numerics/include)
target_include_directories(example20 PRIVATE D:/boost_1_76_0)